# xrLuaFix

./: .gitmodules  CMakeLists.txt  LibMath.cpp  LibMath.h  LibStr.h  LibTab.h  Libs.h  Licence.txt  base.cpp  export.h  export036.h  export45.h  keyboard.h  xrCore.h  xrCore.lib  xrLUA_GSC.lib  xrLuaFix.sln  xrLuaFix.vcxproj  xrLuaFix.vcxproj.filters
cs_cop/: base.cpp  lua.JIT.1.1.4.lib  rvp.sln  rvp.vcxproj  rvp.vcxproj.filters  xrCore.lib
lfs/: lfs.c
lua/: lua.h
soc/: LibMath.cpp  LibMath.h  LibStr.cpp  LibStr.h  LibTab.cpp  LibTab.h  Libs.h  Logger.cpp  base.cpp  export.h  logger.h  xrLuaFix.sln  xrLuaFix.vcxproj  xrLuaFix.vcxproj.filters
soc/cs_cop/: base.cpp  rvp.vcxproj
